--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ plugins {
     id 'java-library'
 }
 
+sourceCompatibility = '1.11'
+targetCompatibility = '1.11'
+
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
